--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="main">
 		<input type="text" name="" id="" class="input" placeholder="Enter text here...">
 		<button class="btn">Generate</button> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgdnbx19IIBKvSAwARaGMfbl06_CnXNcV63g&usqp=CAU" alt="qrcode" class="code">
-		<p id="note">Made with ♥ by Khushi</p>
+		<p id="note">Made with veer</p>
 	</div>
 	<div id="toast">Successfully Generated!!!</div>
 	<script src="script.js"></script>
